<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/gotham.ttf"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="Login"
            android:textColor="@color/textRed"
            android:textSize="40sp"
            android:textStyle="bold" />


        <!--        <androidx.core.widget.NestedScrollView-->
        <!--            android:id="@+id/nestedScrollView"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="5dp"-->
        <!--            android:layout_marginEnd="5dp"-->
        <!--            android:layout_marginBottom="20dp"-->
        <!--            android:background="@drawable/login_rounded_background"-->
        <!--            android:elevation="1.5dp"-->
        <!--            android:overScrollMode="never"-->
        <!--            tools:layout_editor_absoluteX="10dp"-->
        <!--            tools:layout_editor_absoluteY="70dp">-->

        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_undraw_mobile_login_ikmv"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="16dp" />


                <TextView
                    fontPath="fonts/Cursive.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Login"
                    android:textColor="@color/secondarycolor"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:visibility="gone" />



                <LinearLayout
                    android:paddingStart="25dp"
                    android:paddingTop="25dp"
                    android:paddingEnd="25dp"

                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout

                        android:id="@+id/login_email_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/login_edittext_rounded_background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_email_tiet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="50"
                            android:background="@drawable/login_edittext_rounded_background"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:paddingStart="10dp"

                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_pwd_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_pwd_tiet"
                            android:layout_width="match_parent"
                            app:counterMaxLength="50"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_edittext_rounded_background"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingLeft="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    fontPath="fonts/gotham.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/login_edittext_rounded_background"
                    android:backgroundTint="@color/secondarycolor"
                    android:elevation="5dp"
                    android:onClick="signInClick"
                    android:padding="12dp"
                    android:textSize="16sp"
                    android:text="@string/signinbtn"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:visibility="gone"
                    android:onClick="ForgetPassword"
                    android:id="@+id/login_forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/login_forget_password"
                    android:textColor="@color/secondarycolor" />

                <TextView
                    android:layout_marginBottom="20dp"
                    android:id="@+id/login_singUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/secondarycolor"
                    android:text="@string/login_dont_have_an_account"
                    android:textSize="12sp" />


            </LinearLayout>
        </ScrollView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>