<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/gotham.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="Sign Up"
            android:textColor="@color/textRed"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_undraw_mobile_login_ikmv"
            android:visibility="gone"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="16dp" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_rounded_background"
            android:backgroundTint="@color/white"
            android:elevation="1.5dp"
            android:overScrollMode="never"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="70dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:visibility="gone"
                    android:layout_width="250dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_sing_up"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="16dp" />


                <TextView
                    fontPath="fonts/Cursive.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Login"
                    android:textColor="@color/secondarycolor"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:paddingStart="21dp"
                    android:paddingTop="21dp"
                    android:paddingEnd="21dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="76dp"
                        android:layout_gravity="center"
                        android:layout_height="76dp"
                        android:src="@drawable/ic_user" />

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Profile Picture"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUp_userName_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_edittext_rounded_background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUp_userName_tiet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="50"
                            android:background="@drawable/login_edittext_rounded_background"
                            android:hint="@string/userName"
                            android:inputType="textEmailAddress"
                            android:paddingStart="10dp"

                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUp_email_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_edittext_rounded_background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUP_email_tiet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="50"                           android:background="@drawable/login_edittext_rounded_background"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:paddingStart="10dp"

                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/SignUp_pwd_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/SignUp_pwd_tiet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="50"
                            android:background="@drawable/login_edittext_rounded_background"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingLeft="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    fontPath="fonts/gotham.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/login_edittext_rounded_background"
                    android:backgroundTint="@color/secondarycolor"
                    android:elevation="5dp"
                    android:onClick="signUpClick"
                    android:padding="12dp"
                    android:textSize="16sp"
                    android:text="@string/login_signUpBtn"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:layout_weight="2"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                </LinearLayout>
                <TextView
                    android:id="@+id/signUp_login_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="60dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/secondarycolor"
                    android:text="@string/signUP_have_an_account"
                    android:textSize="12sp" />


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>